# Tinyx86

./: .gitignore  CMakeLists.txt  LICENSE.txt  ReadMe.md
Software/header/: essentials.h
Software/src/: essentials.c
docs/: rules.md
